--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -94,7 +94,7 @@
                         </Label>
                         <VBox prefHeight="58.0" prefWidth="184.0">
                            <children>
-                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" style="-fx-text-fill: #E7EAE0;" text="horario">
+                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" selected="true" style="-fx-text-fill: #E7EAE0;" text="horario">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -120,15 +120,28 @@
                </VBox.margin>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="40.0" />
-            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" spacing="30.0">
+            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefWidth="358.0" spacing="30.0">
                <children>
-                  <JFXButton fx:id="btnStart" alignment="CENTER" buttonType="RAISED" onAction="#startSimulation" prefHeight="40.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white; -fx-background-color: #014023;" text="START" textAlignment="CENTER">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></JFXButton>
+                  <AnchorPane prefHeight="28.0" prefWidth="73.0">
+                     <children>
+                        <JFXButton fx:id="btnPause" alignment="CENTER" buttonType="RAISED" onAction="#pauseSimulation" prefHeight="34.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white; -fx-background-color: #014023;" text="PAUSE" textAlignment="CENTER">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXButton>
+                        <JFXButton fx:id="btnStart" alignment="CENTER" buttonType="RAISED" onAction="#startSimulation" prefHeight="34.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white; -fx-background-color: #014023;" text="START" textAlignment="CENTER">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXButton>
+                     </children>
+                  </AnchorPane>
                   <JFXButton fx:id="btnStop" alignment="CENTER" buttonType="RAISED" onAction="#stopSimulation" prefHeight="40.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white;" text="STOP">
                      <font>
                         <Font size="14.0" />
