--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -23,7 +23,7 @@
          <children>
             <HBox id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
-                  <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
+                  <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0"/>
                   <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c39d2d" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
                </children>
                <HBox.margin>
@@ -57,7 +57,7 @@
                   <Insets bottom="10.0" top="20.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="27.0" prefWidth="438.0" style="-fx-text-fill: #E7EAE0;" text="Cantidad de Soldados">
+            <Label prefHeight="27.0" prefWidth="438.0" style="-fx-text-fill: #E7EAE0;" text="Cantidad de Guerreros">
                <font>
                   <Font size="16.0" />
                </font>
@@ -94,7 +94,7 @@
                         </Label>
                         <VBox prefHeight="58.0" prefWidth="184.0">
                            <children>
-                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" selected="true" style="-fx-text-fill: #E7EAE0;" text="horario">
+                              <JFXRadioButton fx:id="rbHorario" contentDisplay="CENTER" onAction="#goHorario" prefHeight="26.0" prefWidth="129.0" selected="true" style="-fx-text-fill: #E7EAE0;" text="horario">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -102,7 +102,7 @@
                                     <ToggleGroup fx:id="toggleSentido" />
                                  </toggleGroup>
                               </JFXRadioButton>
-                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" style="-fx-text-fill: #E7EAE0;" text="antihorario" toggleGroup="$toggleSentido">
+                              <JFXRadioButton fx:id="rbAntihorario" contentDisplay="CENTER" onAction="#goAntihorario" prefHeight="26.0" prefWidth="129.0" style="-fx-text-fill: #E7EAE0;" text="antihorario" toggleGroup="$toggleSentido">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
