--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -23,7 +23,7 @@
          <children>
             <HBox id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
-                  <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0"/>
+                  <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
                   <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c39d2d" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
                </children>
                <HBox.margin>
@@ -78,7 +78,7 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Spinner fx:id="startIndex" prefHeight="25.0" prefWidth="76.0">
+                        <Spinner fx:id="startIndex" onMouseClicked="#changeStart" prefHeight="25.0" prefWidth="76.0">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
